// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Heading" with color prop 1`] = `
<h4
  class="sc-bdVaJa cMnfqb"
>
  Heading
</h4>
`;

exports[`renders "Heading" with color prop 2`] = `
<h4
  class="sc-bdVaJa ccECIP"
>
  Heading
</h4>
`;

exports[`renders "Heading" with l prop 1`] = `
<h4
  class="sc-bdVaJa ijBHDn"
>
  Heading
</h4>
`;

exports[`renders "Heading" with margin 1`] = `
<h4
  class="sc-bdVaJa goYJIG"
>
  Heading
</h4>
`;

exports[`renders "Heading" with no props 1`] = `
<h4
  class="sc-bdVaJa gZboYs"
>
  Heading
</h4>
`;

exports[`renders "Heading" with s prop 1`] = `
<h4
  class="sc-bdVaJa LpKCi"
>
  Heading
</h4>
`;
